--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -30,11 +30,11 @@
 
     .messaging.messaging-home
       .container
-        .primary.headline
+        %h1.primary.headline
           Develop and Scale 
           %strong#technology-rotate Apps
           in the Cloud
-        .secondary OpenShift is a free, auto-scaling platform as a service for web applications.  It streamlines the application life cycle so developers can focus on their users, customers, and code.
+        %h2.secondary OpenShift is a free, auto-scaling platform as a service for web applications.  It streamlines the application life cycle so developers can focus on their users, customers, and code.
 
 #learn.section-striped.lift-counter
   .container.container-inset
