--- a/site/app/views/home/new.html.haml
+++ b/site/app/views/home/new.html.haml
@@ -1,5 +1,3 @@
--# file: Main site index
-
 - content_for :header do
   .messaging.messaging-home
     .container
@@ -8,6 +6,9 @@
         %strong#technology-rotate Apps
         in the Cloud
       .secondary OpenShift is a free, auto-scaling platform as a service for web applications.  It streamlines the application life cycle so developers can focus on their users, customers, and code.
+
+- content_for :stylesheets do
+  = stylesheet_link_tag '/app/stylesheets/home.css', :media => 'all'
 
 - content_for :javascripts do
   = javascript_include_tag "/app/javascripts/twitter.branding.js"
