--- a/site/app/views/styleguide/overview.html.haml
+++ b/site/app/views/styleguide/overview.html.haml
@@ -2,17 +2,17 @@
   .messaging
     .container
       .primary.headline
-        What is
-        %strong OpenShift?
+        Shift your App to the Cloud
       .secondary
         Start your journey into the cloud with the answers you need.
 
+  = take_action new_web_user_path, 'Sign up to try <strong>OpenShift</strong>'
+
 %h1.ribbon
-  .ribbon-content Shift your App to the Cloud.
+  .ribbon-content What is OpenShift?
   .ribbon-left
 
 %section
-  -#:markdown
   :plain
     OpenShift is Red Hat's Cloud Computing Platform-as-a-Service (PaaS) offering.  OpenShift is an application platform in the cloud where application developers and teams can build, test, deploy, and run their applications.  OpenShift takes care of all the infrastructure, middleware, and management and allows the developer to focus on what they do best: designing and coding applications. 
 
@@ -47,17 +47,27 @@
 
     That's all there is to it.  Simple, right?
 
-    ## Code anything.
+  .row
+    .span6
+      :plain
+        ## Code anything.
 
-    OpenShift takes a No-Lock-In approach to PaaS by providing built-in support for Node.JS, Ruby, Python, PHP, Perl, and Java (the standard in today's Enterprise).  In addition, OpenShift is extensible with a customizable cartridge functionality that allows enterprising developers to add any other language they wish.  We've seen everything from Clojure to Cobol running on OpenShift.  In addition to this flexible, no-lock-in, language approach, OpenShift supports all the popular frameworks that make a developer's life easier including everything from Spring, to Rails, to Play.  OpenShift is designed to allow Developers to work the way they want to work by giving them the languages, frameworks and tools they need for fast and easy application development.
-    ![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)
+        OpenShift takes a No-Lock-In approach to PaaS by providing built-in support for Node.JS, Ruby, Python, PHP, Perl, and Java (the standard in today's Enterprise).  In addition, OpenShift is extensible with a customizable cartridge functionality that allows enterprising developers to add any other language they wish.  We've seen everything from Clojure to Cobol running on OpenShift.  
+        
+        In addition to this flexible, no-lock-in, language approach, OpenShift supports all the popular frameworks that make a developer's life easier including everything from Spring, to Rails, to Play.  OpenShift is designed to allow Developers to work the way they want to work by giving them the languages, frameworks and tools they need for fast and easy application development.
+        ![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)
 
-    ## Blow the doors off your expectations
+    .span6
+      :plain
+        ## Blow the doors off your expectations
 
-    Once you have your application running in the Cloud, the next thing to worry about is how it is going to handle the massive amount of usage it gets when it goes viral.  Well, no worries here.  OpenShift has you covered.  OpenShift provides both automatic and manual scaling of the resources that are supporting your application so that it will be able to service any volume of activity that you can dream of.  This is one of the sweet benefits of OpenShift PaaS…  you don't need to worry about any infrastructure or middleware issues like administration, tuning, or scaling.  OpenShift handles this for you.  With Auto-Scaling, OpenShift can scale your application either Vertically by adding horsepower to the resources it is using, or Horizontally by adding additional instances of your application.  Both of these can happen automatically, or you can turn it on manually.  Either way, when your big idea takes off, OpenShift will allow it to soar.
+        Once you have your application running in the Cloud, the next thing to worry about is how it is going to handle the massive amount of usage it gets when it goes viral.  Well, no worries here.  OpenShift has you covered.  OpenShift provides both automatic and manual scaling of the resources that are supporting your application so that it will be able to service any volume of activity that you can dream of.  This is one of the sweet benefits of OpenShift PaaS…  you don't need to worry about any infrastructure or middleware issues like administration, tuning, or scaling.  OpenShift handles this for you.  
+        
+        With Auto-Scaling, OpenShift can scale your application either Vertically by adding horsepower to the resources it is using, or Horizontally by adding additional instances of your application.  Both of these can happen automatically, or you can turn it on manually.  Either way, when your big idea takes off, OpenShift will allow it to soar.
 
-    ![OpenShift Scaling](/app/images/overview-scaling.png)
+        ![OpenShift Scaling](/app/images/overview-scaling.png)
 
+  :plain
     ## Under the Hood.
 
     OpenShift by Red Hat is built on all open-source technologies (we are the leading open source company after all).  A decade of enhancements in these technologies contributed by the open source community has resulted in a set of rock-solid, bullet-proof, super-secure, and high-performing technology components that make OpenShift the best PaaS in the business.
@@ -74,3 +84,4 @@
 
     ![OpenShift ease of use](/app/images/overview-ease-of-use.png)
 
+%section= take_action new_web_user_path, 'Ready to scale in the cloud?', 'Sign up now'
