Give sections bottom margin, left align take-action in responsive mode, magic

--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -112,6 +112,7 @@ body.signup {
   }
 }
 @media (max-width: 768px) {
+  .section-striped { background: none; }
   .section-striped .link-tile { padding: 10px $gridGutterWidthPhone; }
 }
 @if $gridGutterWidthTablet != $gridGutterWidth { @media (min-width: 768px) and (max-width: 979px) {
@@ -261,6 +262,9 @@ body.signup {
     width: 100%;
     font-size: 13px;
     letter-spacing: 0px;
+  }
+  #nav .take-action {
+    margin: 20px 0 0;
   }
 }
 @if $gridGutterWidthTablet != $gridGutterWidth { @media (min-width: 768px) and (max-width: 979px) {
@@ -459,6 +463,10 @@ h1.ribbon {
 
   h1 {
     margin-top: 25px;
+    margin-bottom: 25px;
+  }
+
+  section {
     margin-bottom: 25px;
   }
 }
