--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -82,6 +82,21 @@ body.signup {
 .section-top {
   background-color: $topBarBackgroundColor; 
   color: white;
+
+  .container .btn {
+    background: #333;
+    border-radius: 0;
+    -moz-border-radius: 0;
+    text-shadow: none;
+    border: 0;
+    color: white;
+    box-shadow: none;
+
+    &:hover, &:active {
+      background: #AAAAAA;
+      color: black;
+    }
+  }
 }
 #nav {
   background: $navBackgroundColor url($navBackgroundImage) repeat-x bottom left;
@@ -158,7 +173,7 @@ body.signup {
 .messaging {
   clear: both;
 
-  color: #bbb;
+  color: white;
   text-align: center;
 
   margin-bottom: 30px;
@@ -169,9 +184,6 @@ body.signup {
     text-transform: uppercase;
   }
 
-  strong {
-    color: white;
-  }
   .secondary {
     font-size: 16px;
     line-height: 18px;
