Integrate backgrounds directly, work around lack of compass for now by inlining after generation. Fix header colors Fix fonts to let Helvetica override Liberation Sans Letter spacing on check the buzz

--- a/site/app/stylesheets/_fonts.scss
+++ b/site/app/stylesheets/_fonts.scss
@@ -20,5 +20,5 @@
   font-style: normal;
 }
 
-$baseFontFamily:      "Liberation Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$baseFontFamily:      "Helvetica Neue", Helvetica, "Liberation Sans", Arial, sans-serif;
 $headerFontFamily:    Overpass, "Helvetica Neue", Helvetica, Arial, sans-serif;
