--- a/site/app/views/layouts/site/_header.html.haml
+++ b/site/app/views/layouts/site/_header.html.haml
@@ -1,9 +1,15 @@
 #top.section-top
   .container
-    .pull-left= link_to "Sign up for the newsletter »", newsletter_signup_url
+    .pull-left
+      = link_to "Sign up for the newsletter »", newsletter_signup_url
     .pull-right.login
-      = link_to "Sign In", control_panel_path, :class => 'btn btn-small'
-      -# ['f', 'g', 't'].each do |p|
+      -if session[:login]
+        = link_to session[:login], "console", :class => 'btn btn-small'
+        = link_to 'Sign out', logout_path, :class => 'btn btn-small'
+      -else
+        = link_to "Sign In", "signin", :class => 'btn btn-small'
+
+      - ['f', 'g', 't'].each do |p|
         = link_to p, :class => 'btn btn-small login-provider' do
           %img{:alt => p}
 
@@ -18,7 +24,7 @@
             %strong> Open
             Shift
       %ul.nav
-        %li.active= link_to "Learn More", product_overview_path
+        %li.active= link_to "Learn More", "styleguide/overview"
         %li= link_to "Documentation", "dev_center"
         %li.divider &nbsp;
         %li= link_to "Console", "console"
