--- a/site/app/views/user/signup.html.haml
+++ b/site/app/views/user/signup.html.haml
@@ -27,7 +27,7 @@
           Are you human?
         .controls
           = recaptcha_tags :ssl => true    
-    = form.buttons do
+    = form.buttons :class => 'form-actions' do
       = link_to "Cancel", account_path, :class => 'btn'
       = form.commit_button :label => 'Sign up for OpenShift'
 
