Branding: added site controller, adjusted missing layout on legacy pages

--- a/site/app/views/product/_video_embed.html.haml
+++ b/site/app/views/product/_video_embed.html.haml
@@ -7,7 +7,7 @@
   end
 
 - if vid
-  = render "#{vid[:provider].to_s}_embed", :vid_id => vid[:id], :width => width, :height => height
+  = render "product/#{vid[:provider].to_s}_embed", :vid_id => vid[:id], :width => width, :height => height
 - else
   %em
     Video not available
