--- a/site/app/views/layouts/site/_header.html.haml
+++ b/site/app/views/layouts/site/_header.html.haml
@@ -24,7 +24,7 @@
             %strong> Open
             Shift
       %ul.nav
-        %li.active= link_to "Learn More", "styleguide/overview"
+        %li.active= link_to "Learn More", "/app/new/express"
         %li= link_to "Documentation", "dev_center"
         %li.divider &nbsp;
         %li= link_to "Console", "console"
