--- a/site/public/stylesheets/common.css
+++ b/site/public/stylesheets/common.css
@@ -2494,6 +2494,9 @@ a.thumbnail:hover {
   visibility: hidden; }
 
 @media (max-width: 480px) {
+  .is-under-481 {
+    content: 'true'; }
+
   .nav-collapse {
     -webkit-transform: translate3d(0, 0, 0); }
 
@@ -2560,6 +2563,9 @@ a.thumbnail:hover {
   .carousel-caption {
     position: static; } }
 @media (max-width: 767px) {
+  .is-under-767 {
+    content: 'true'; }
+
   .container {
     width: auto;
     padding: 0 20px; }
@@ -2595,6 +2601,9 @@ a.thumbnail:hover {
   .box-content {
     padding: 10px 20px; } }
 @media (min-width: 768px) and (max-width: 979px) {
+  .is-in-portrait {
+    content: 'true'; }
+
   .row {
     margin-left: -20px;
     *zoom: 1; }
@@ -2779,6 +2788,9 @@ a.thumbnail:hover {
   .box-content {
     padding: 20px; } }
 @media (max-width: 979px) {
+  .is-under-979 {
+    content: 'true'; }
+
   body {
     padding-top: 0; }
 
@@ -2887,9 +2899,15 @@ a.thumbnail:hover {
     overflow: hidden;
     height: 0; } }
 @media (min-width: 980px) {
+  .is-above-980 {
+    content: 'true'; }
+
   .nav-collapse.collapse {
     height: auto !important; } }
 @media (min-width: 1200px) {
+  .is-above-1200 {
+    content: 'true'; }
+
   .row {
     margin-left: -30px;
     *zoom: 1; }
@@ -3920,7 +3938,7 @@ footer {
     display: block;
     float: left;
     padding: 0px 6px 5px; } }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .hero-unit {
     padding: 0;
     margin-bottom: 13px;
